--- a/config/stompbox.yml.sample
+++ b/config/stompbox.yml.sample
@@ -1,2 +1,14 @@
-github:
-  branch: master
+database: postgres://stompbox:stompbox@localhost/stompbox
+deployments: /opt/deployments
+
+# Change this!
+api_key: 3821A95D456134214FAD6FA91A2BAFE574D47151
+
+repositories:
+  ballast-rails:
+    branches:
+      - master
+  ballast-sinatra:
+    branches: 
+      - master
+      - test
