Add facebox for new repository form. Remove repository info from dashboard.

--- a/config/torquebox.yml
+++ b/config/torquebox.yml
@@ -5,10 +5,10 @@ web:
   context: /stompbox
 
 environment:
-  AUTO_MIGRATE: 'true'
+#  AUTO_MIGRATE: true
   DATABASE_URL: postgres://stompbox:stompbox@localhost/stompbox
   DEPLOYMENTS: /opt/deployments
-  #REQUIRE_AUTHENTICATION: 'true'
+  REQUIRE_AUTHENTICATION: true
 
   # Change this!
   API_KEY: 3821A95D456134214FAD6FA91A2BAFE574D47151
