Migrate auth to torquebox-security 2.0

--- a/config/torquebox.yml
+++ b/config/torquebox.yml
@@ -1,10 +1,7 @@
 application:
   rackup: config.ru
 
-web:
-  context: /stompbox
-
-environment:
+#environment:
 #  Sample configuration options
 #  AUTO_MIGRATE: true
 #  DATABASE_URL: postgres://stompbox:stompbox@localhost/stompbox
