Use dm-infinispan-adapter for persisted models. Bump sinatra to 1.2.6 Change .rvmrc to jruby 1.6.4 with --create Remove jeweler

--- a/config/torquebox.yml
+++ b/config/torquebox.yml
@@ -1,6 +1,9 @@
 application:
   rackup: config.ru
 
+web:
+  context: /stompbox
+
 #environment:
 #  Sample configuration options
 #  AUTO_MIGRATE: true
